Add ability to upload a play avatar
- Enables active storage
- Enables API to take an avatar picture
- Adds some enhancements around security of upload avatars
