# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema[8.0].define(version: 2025_10_31_194803) do
+ActiveRecord::Schema[8.0].define(version: 2025_11_07_135313) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "pg_catalog.plpgsql"
 
@@ -25,6 +25,34 @@ ActiveRecord::Schema[8.0].define(version: 2025_10_31_194803) do
     t.datetime "updated_at", null: false
     t.string "achievement_type"
     t.index ["achievement_type"], name: "index_achievements_on_achievement_type", unique: true
+  end
+
+  create_table "active_storage_attachments", force: :cascade do |t|
+    t.string "name", null: false
+    t.string "record_type", null: false
+    t.bigint "record_id", null: false
+    t.bigint "blob_id", null: false
+    t.datetime "created_at", null: false
+    t.index ["blob_id"], name: "index_active_storage_attachments_on_blob_id"
+    t.index ["record_type", "record_id", "name", "blob_id"], name: "index_active_storage_attachments_uniqueness", unique: true
+  end
+
+  create_table "active_storage_blobs", force: :cascade do |t|
+    t.string "key", null: false
+    t.string "filename", null: false
+    t.string "content_type"
+    t.text "metadata"
+    t.string "service_name", null: false
+    t.bigint "byte_size", null: false
+    t.string "checksum"
+    t.datetime "created_at", null: false
+    t.index ["key"], name: "index_active_storage_blobs_on_key", unique: true
+  end
+
+  create_table "active_storage_variant_records", force: :cascade do |t|
+    t.bigint "blob_id", null: false
+    t.string "variation_digest", null: false
+    t.index ["blob_id", "variation_digest"], name: "index_active_storage_variant_records_uniqueness", unique: true
   end
 
   create_table "earned_achievements", force: :cascade do |t|
@@ -115,10 +143,12 @@ ActiveRecord::Schema[8.0].define(version: 2025_10_31_194803) do
     t.index ["username"], name: "index_players_on_username", unique: true
   end
 
+  add_foreign_key "active_storage_attachments", "active_storage_blobs", column: "blob_id"
+  add_foreign_key "active_storage_variant_records", "active_storage_blobs", column: "blob_id"
   add_foreign_key "earned_achievements", "achievements"
   add_foreign_key "earned_achievements", "game_sessions"
   add_foreign_key "earned_achievements", "players"
   add_foreign_key "game_sessions", "players"
-  add_foreign_key "high_scores", "game_sessions"
+  add_foreign_key "high_scores", "game_sessions", on_delete: :cascade
   add_foreign_key "player_profiles", "players"
 end
